# RPi-Axia-Tally-Controller

./: .gitignore  Cargo.toml  README.md  build_release.sh  build_release_and_deploy.sh
html/: index.html  scripts.js  style.css
rpi-iqx-tally-core/: Cargo.toml
rpi-iqx-tally-core/src/: api_handler.rs  ctrl_thread.rs  event_parser.rs  gpio_driver.rs  json_handler.rs  lwcp_handler.rs  main.rs
test/: new_tally.json  new_tally.sh  old_tally.json  old_tally.sh
