[package]
name = "rpi-iqx-tally-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
rppal = { version = "0.17.1" }
actix-web = "4"
actix-cors = "0.7.0"
